--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
   <!-- ضع العنوان الخاص بك هنا  -->
-  <title> Upadte now now </title>
+  <title> Upadte now </title>
   <meta name="title" content="Upadte now">
   <meta property="twitter:title" content="Upadte now">
   <meta property="og:title" content="Upadte now">
